Fixes toolbar overlap to page title

--- a/src/components/Toolbar/Toolbar.scss
+++ b/src/components/Toolbar/Toolbar.scss
@@ -84,5 +84,5 @@
 .actions {
   position: absolute;
   right: 14px;
-  bottom: 14px;
+  top: 0;
 }
